--- a/packages/docs-app/src/components/PageHeader/page-header.scss
+++ b/packages/docs-app/src/components/PageHeader/page-header.scss
@@ -14,6 +14,7 @@
   white-space: nowrap;
   text-transform: capitalize;
   font-family: $ray-font-stack-mono;
+  margin: 0;
 }
 
 .page-header__title {
