--- a/packages/docs-app/src/components/SideNav/side-nav.scss
+++ b/packages/docs-app/src/components/SideNav/side-nav.scss
@@ -1,3 +1,13 @@
+@mixin nav-h-padding {
+  padding-left: map-get($ray-container-gutters, sm);
+  padding-right: map-get($ray-container-gutters, sm);
+
+  @media (min-width: map-get($ray-grid-breakpoints, lg)) {
+    padding-left: $ray-spacing-xl;
+    padding-right: $ray-spacing-xl;
+  }
+}
+
 .side-nav {
   position: fixed;
   left: -100%;
@@ -12,7 +22,7 @@
   width: 100%;
   border-right: 1px solid $ray-color-gray-10;
   transition: left 0.15s ease;
-  padding: 4rem map-get($ray-container-gutters, sm);
+  padding: 4rem 0;
 
   &--open {
     left: 0;
@@ -22,7 +32,7 @@
     position: sticky;
     left: 0;
     top: 0;
-    padding: $ray-spacing-2xl $ray-spacing-xl;
+    padding: $ray-spacing-2xl 0;
   }
 }
 
@@ -40,10 +50,46 @@
 }
 
 .side-nav__item {
-  padding: 2px 0;
+  a {
+    @include nav-h-padding;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    display: block;
+    color: $ray-color-text-medium;
+
+    &:hover {
+      background-color: $ray-color-gray-10;
+      color: $ray-color-text-dark;
+      text-decoration: none;
+    }
+
+    &.active {
+      color: $ray-color-text-dark;
+      font-weight: 600;
+    }
+  }
 
   ul {
     margin-bottom: 0.5rem;
+  }
+}
+
+.side-nav__item--heading {
+  @include nav-h-padding;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  margin-top: $ray-spacing-xl;
+  color: black;
+  display: flex;
+  align-items: center;
+
+  &::after {
+    width: 100%;
+    height: 1px;
+    content: '';
+    background-color: $ray-color-gray-10;
+    display: block;
+    margin-left: 1rem;
   }
 }
 
@@ -55,36 +101,39 @@
   border-bottom: 1px solid $ray-color-gray-10;
   padding-bottom: $ray-spacing-lg;
   margin-bottom: $ray-spacing-lg;
+  @include nav-h-padding;
 }
 
 .side-nav__heading {
-  @extend .ray-h6;
+  @extend .ray-h5;
   display: inline-block;
   color: $ray-color-text-dark;
   text-decoration: none;
   line-height: 1.2;
   margin: 0 0 0.25rem;
   white-space: nowrap;
+
   &:hover {
     color: $ray-color-blue-50;
+    text-decoration: none;
   }
 
   &:focus {
-    text-decoration: underline;
     outline: none;
-    color: $ray-color-blue-50;
+    text-decoration: none;
+    color: $ray-color-blue-60;
+  }
+
+  .side-nav__version {
+    font-size: 1rem;
+    color: $ray-color-text-light;
+    font-weight: 400;
   }
 }
 
 .side-nav__github {
   @extend .ray-p5;
   display: block;
-}
-
-.side-nav__version {
-  @extend .ray-p5;
-  padding: $ray-spacing-md 0;
-  opacity: 0.75;
 }
 
 .side-nav__nav-items {
