--- a/packages/core/src/components/text-field/_text-field.scss
+++ b/packages/core/src/components/text-field/_text-field.scss
@@ -21,6 +21,7 @@
     &__label {
       @include label;
       z-index: 2;
+      cursor: text;
     }
 
     &__input {
@@ -35,7 +36,7 @@
       padding: 0 $ray-field-h-spacing - $ray-border-width;
       outline: 0;
       border: 0;
-      cursor: pointer;
+      cursor: text;
 
       &::-ms-clear {
         display: none;
