--- a/packages/core/src/components/table/_table.scss
+++ b/packages/core/src/components/table/_table.scss
@@ -4,12 +4,13 @@
 
   thead {
     tr {
-      border-bottom: 1px solid $ray-color-black;
+      border-bottom: 1px solid $ray-color-blue-50;
     }
   }
 
   th {
     font-size: 12px;
+    font-weight: 400;
     font-family: $ray-font-stack-mono;
     color: $ray-color-gray-60;
     text-align: left;
@@ -23,6 +24,9 @@
 
   td {
     padding: 1rem 0;
-    white-space: nowrap;
+
+    &:not(:last-child) {
+      padding-right: 1rem;
+    }
   }
 }
