--- a/packages/docs-app/src/styles/_page.scss
+++ b/packages/docs-app/src/styles/_page.scss
@@ -115,3 +115,17 @@ button,
 .page {
   display: flex;
 }
+
+blockquote {
+  padding: $ray-spacing-md;
+  margin: 1rem 0;
+  background-color: hsla(240, 17%, 98%, 1);
+  color: $ray-color-text-dark;
+  border-radius: $ray-border-radius;
+  border: 1px solid $ray-color-gray-10;
+  border-left: 2px solid $ray-color-blue-50;
+
+  p:last-child {
+    margin: 0;
+  }
+}
