--- a/packages/core/src/components/select/_select.scss
+++ b/packages/core/src/components/select/_select.scss
@@ -4,12 +4,19 @@
 @include exports('ray-select') {
   .#{$ray-class-prefix}select {
     @include icon-support('select');
+
     border: $ray-border-width solid $ray-color-gray-60;
     background-color: $ray-color-white;
     border-radius: $ray-border-radius;
     position: relative;
     height: $ray-field-height;
     display: flex;
+
+    &__icon--right {
+      @include icon;
+      // need to add spacing to compensate for the arrow
+      right: calc(#{$ray-field-h-spacing} * 2 + 12px);
+    }
 
     &::after {
       content: '';
