--- a/packages/core/src/global/_typography.scss
+++ b/packages/core/src/global/_typography.scss
@@ -193,6 +193,21 @@
     line-height: 12px;
   }
 
+  .#{$ray-class-prefix}text-monospace {
+    font-family: $ray-font-stack-mono;
+    font-weight: 400;
+  }
+
+  .#{$ray-class-prefix}blockquote {
+    padding: $ray-spacing-md;
+    margin: $ray-spacing-lg 0;
+    background-color: $ray-color-gray-02;
+    color: $ray-color-text-dark;
+    border-radius: $ray-border-radius;
+    border: 1px solid $ray-color-gray-10;
+    border-left: 2px solid $ray-color-blue-50;
+  }
+
   .#{$ray-class-prefix}running-text {
     h1,
     h2,
@@ -243,6 +258,10 @@
 
     ol li {
       list-style-type: decimal;
+    }
+
+    blockquote {
+      @extend .#{$ray-class-prefix}blockquote;
     }
   }
 }
