--- a/packages/docs-app/src/components/markdown/markdown.scss
+++ b/packages/docs-app/src/components/markdown/markdown.scss
@@ -1,5 +1,5 @@
 .page-intro {
-  @extend .#{$ray-class-prefix}p3;
+  @extend .#{$ray-class-prefix}text--body-large;
   display: block;
   margin-bottom: 1.5rem;
   max-width: 44rem;
