--- a/packages/core/src/global/_variables.scss
+++ b/packages/core/src/global/_variables.scss
@@ -6,7 +6,7 @@ $ray-font-stack-sans-serif: 'Apercu', Avenir, -apple-system, BlinkMacSystemFont,
   'Helvetica Neue', Helvetica, 'Calibri', 'Roboto', Arial, sans-serif;
 $ray-font-stack-mono: 'Apercu Mono', 'Consolas', 'Bitstream Vera Sans Mono',
   'Courier New', Courier, monospace;
-
+$ray-base-font-size: 16px;
 $ray-assign-typography-styles-natively: false !default;
 
 $ray-transition: all 0.125s ease;
