--- a/packages/core/src/global/_base.scss
+++ b/packages/core/src/global/_base.scss
@@ -2,7 +2,7 @@
 
 @include exports('ray-base') {
   html {
-    font-size: 16px;
+    font-size: $ray-base-font-size;
   }
 
   body {
@@ -13,8 +13,8 @@
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 28px;
+    font-size: 1rem;
+    line-height: 1.75rem;
   }
 
   * {
