--- a/packages/docs-app/src/components/SideNav/side-nav.scss
+++ b/packages/docs-app/src/components/SideNav/side-nav.scss
@@ -39,10 +39,16 @@
 .side-nav--mobile-toggle {
   position: fixed;
   top: 1rem;
-  left: map-get($ray-container-gutters, sm);
+  left: calc(#{map-get($ray-container-gutters, sm)} - 0.5rem);
   cursor: pointer;
   z-index: 7001;
-  padding: 0 !important;
+  padding: 0.5rem;
+  background-color: $ray-color-white;
+  border: 1px solid $ray-color-gray-10;
+
+  &:hover {
+    border-color: $ray-color-blue-50;
+  }
 
   @media (min-width: map-get($ray-grid-breakpoints, lg)) {
     display: none;
