--- a/packages/docs-app/src/components/SideNav/side-nav.scss
+++ b/packages/docs-app/src/components/SideNav/side-nav.scss
@@ -24,6 +24,12 @@
   transition: left 0.15s ease;
   padding: 4rem 0;
 
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
   &--open {
     left: 0;
   }
