--- a/packages/core/src/global/_variables.scss
+++ b/packages/core/src/global/_variables.scss
@@ -28,10 +28,10 @@ $ray-field-font-size: 16px;
 $ray-field-line-height: 28px;
 $ray-field-icon-width: 1rem;
 
-$ray-btn-v-spacing: 20px - $ray-border-width;
-$ray-btn-v-spacing-compact: 12px - $ray-border-width;
-$ray-btn-h-spacing: 24px - $ray-border-width;
-$ray-btn-h-spacing-compact: 12px - $ray-border-width;
+$ray-button-v-spacing: 20px - $ray-border-width;
+$ray-button-v-spacing-compact: 12px - $ray-border-width;
+$ray-button-h-spacing: 24px - $ray-border-width;
+$ray-button-h-spacing-compact: 12px - $ray-border-width;
 
 // Grid breakpoints
 //
