fix: css reset and normalize (#73)
* fix: css reset and normalize

* fix: headings

--- a/packages/core/src/global/_variables.scss
+++ b/packages/core/src/global/_variables.scss
@@ -9,6 +9,9 @@ $ray-font-stack-mono: 'Apercu Mono', 'Consolas', 'Bitstream Vera Sans Mono',
 $ray-base-font-size: 16px;
 $ray-assign-typography-styles-natively: false !default;
 
+$ray-css-reset: true !default;
+$ray-css-normalize: true !default;
+
 $ray-border-radius: 0.25rem;
 $ray-border-width: 1px;
 
