--- a/packages/core/src/ray-core.scss
+++ b/packages/core/src/ray-core.scss
@@ -1,4 +1,5 @@
-@import './global/normalize';
+@import './global/css-reset';
+@import './global/css-normalize';
 
 @import './global/colors';
 @import './global/variables';
