--- a/packages/core/src/global/_typography.scss
+++ b/packages/core/src/global/_typography.scss
@@ -2,12 +2,14 @@
 
 @mixin ray-display-1 {
   font-size: 4rem;
+  font-weight: 600;
   line-height: 5.5rem;
   margin: 0 0 2rem;
 }
 
 @mixin ray-display-2 {
   font-size: 3rem;
+  font-weight: 600;
   line-height: 4rem;
   margin: 0 0 2rem;
 }
@@ -203,6 +205,26 @@
 
   ol {
     list-style-type: decimal;
+  }
+
+  /**
+    * Prevent `sub` and `sup` elements from affecting the line height in
+    * all browsers.
+    */
+  sub,
+  sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+  }
+
+  sub {
+    bottom: -0.25em;
+  }
+
+  sup {
+    top: -0.5em;
   }
 
   .#{$ray-class-prefix}running-text {
